
                CHANGES IN party VERSION 1.0-3 (2012-xx-xx)

    o    new function `varimpAUC' for AUC-based variable importance measures


                CHANGES IN party VERSION 1.0-2 (2012-04-26)

    o    version 1.0-0 introduced a new bug in plotting Kaplan-Meier curves
         when fixing the weight problem in survfit; the x-axis labels where
         incorrect. Spotted by Sarah Vowler <Sarah.Vowler@cancer.org.uk>.


                CHANGES IN party VERSION 1.0-1 (2012-03-23)

    o    fix -Werror warnings suggested by Murray Stokely <mstokely@google.com>

    o    make sure no factor variables are evaluated as surrogate split

    o    fix confusing warning messages in varimp and check
         for non-unity weights


                CHANGES IN party VERSION 1.0-0 (2012-02-17)

    o    varimp can now partially deal with missing values

    o    Kaplan-Meier curves are now computed _after_ removing
         zero case weights (see comment in ?survfit); plots may change
         slightly.

    o    use cforest_unbiased instead of cforest_control/cforest_classical
         in examples and regression tests


                CHANGES IN party VERSION 0.9-99996 (2011-12-20)

    o    don't ship doxygen documentation with package

    o    ctree() and cforest() don't handle `-' in formulae,
         warning added to Rd files


                CHANGES IN party VERSION 0.9-99995 (2011-10-27)

    o    observations with missing values in newdata might not have gone 
         with the majority in predict(<ctree>, newdata) when no surrogate 
         split was applicable. Spotted and fixed by 
         Vik <viknesh@stat.ufl.edu>.


                CHANGES IN party VERSION 0.9-99994 (2011-08-22)

    o    reuse classes exported by coin


                CHANGES IN party VERSION 0.9-99993 (2011-07-26)

    o    attach NAMESPACE properly in tests


                CHANGES IN party VERSION 0.9-99992 (2011-05-02)

    o    fix partial matching problems

